--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,5 @@ a{
 .app{
     min-height: 100vh;
     color: white;
-    background: linear-gradient(#0b004e, #1d152f, #002834);
+    background: linear-gradient(#550808, #09001b, #00151b);
 }
